# ChangeLog for dev-util/dialogblocks
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/dialogblocks/ChangeLog,v 1.6 2007/05/22 09:16:51 mrness Exp $

*dialogblocks-4.08 (22 May 2007)

  22 May 2007; Alin Năstac <mrness@gentoo.org> -dialogblocks-3.13.ebuild,
  -dialogblocks-3.17.ebuild, +dialogblocks-4.08.ebuild:
  Version bump.

*dialogblocks-3.19 (15 Apr 2007)

  15 Apr 2007; Alin Năstac <mrness@gentoo.org> +dialogblocks-3.19.ebuild:
  Version bump.

*dialogblocks-3.17 (23 Mar 2007)

  23 Mar 2007; Alin Năstac <mrness@gentoo.org> -dialogblocks-3.12.ebuild,
  +dialogblocks-3.17.ebuild:
  Version bump.

*dialogblocks-3.13 (14 Jan 2007)

  14 Jan 2007; Alin Năstac <mrness@gentoo.org> -dialogblocks-3.06.ebuild,
  +dialogblocks-3.13.ebuild:
  Remove old version. Version bump.

*dialogblocks-3.12 (13 Nov 2006)

  13 Nov 2006; Alin Nastac <mrness@gentoo.org> +dialogblocks-3.12.ebuild:
  Version bump. Add ~amd64 keyword.

*dialogblocks-3.06 (18 Aug 2006)

  18 Aug 2006; Alin Nastac <mrness@gentoo.org> +files/dialogblocks.desktop,
  +files/dialogblocks.sh, +metadata.xml, +dialogblocks-3.06.ebuild:
  Initial ebuild import from the version published on DialogBlocks homepage.
  Closed bug #69791.
