@@ -15,14 +15,14 @@ EBUILD dialogblocks-3.19.ebuild 987 RMD160 479dcffd8b81302d6de7c8b790890c46f1ba4
 MD5 1b6c286fdce717fbf3005338ed1d6815 dialogblocks-3.19.ebuild 987
 RMD160 479dcffd8b81302d6de7c8b790890c46f1ba432b dialogblocks-3.19.ebuild 987
 SHA256 81aa5fbf31ccd4ab021ca3ac66da2e6656ba5fe9d7b1e47ea9be8a37e170665d dialogblocks-3.19.ebuild 987
-EBUILD dialogblocks-4.08.ebuild 987 RMD160 4904ad030ea3dd1c321859d392591f3eea51e92d SHA1 282a594b994928b26d83e5f20fc8fbe02cd44a88 SHA256 e0c64b80668f04069535652b809542712e2c22a6adf4f1af55d08cbb80778ca5
-MD5 5bea79d4f1e01f68d7201cbe9b6eb1d5 dialogblocks-4.08.ebuild 987
-RMD160 4904ad030ea3dd1c321859d392591f3eea51e92d dialogblocks-4.08.ebuild 987
-SHA256 e0c64b80668f04069535652b809542712e2c22a6adf4f1af55d08cbb80778ca5 dialogblocks-4.08.ebuild 987
-MISC ChangeLog 1275 RMD160 292cbf1a9f155e9af723453a87ea5af1de279222 SHA1 6cc262298baecf7fb8d73aeefb58e28d942d4cb9 SHA256 2e54b329cd467cbc1cfd3b6a83a7f472e50cd4b223841ba39bf48f35cdf1e2a3
-MD5 f64bea48700888148a3e4abffed9ca1a ChangeLog 1275
-RMD160 292cbf1a9f155e9af723453a87ea5af1de279222 ChangeLog 1275
-SHA256 2e54b329cd467cbc1cfd3b6a83a7f472e50cd4b223841ba39bf48f35cdf1e2a3 ChangeLog 1275
+EBUILD dialogblocks-4.08-r1.ebuild 1462 RMD160 d11ee9fdceba0baaa8ec93f224f981550f9341b2 SHA1 7b3a261a3f007dc78ea3eb1e632d1547312f3482 SHA256 4b3f884fe7d43478d4d1d5cda84683ada314d9109bea2217feff1d6cd60ed0d0
+MD5 3d491b2a13b923709ac8f4634d97e829 dialogblocks-4.08-r1.ebuild 1462
+RMD160 d11ee9fdceba0baaa8ec93f224f981550f9341b2 dialogblocks-4.08-r1.ebuild 1462
+SHA256 4b3f884fe7d43478d4d1d5cda84683ada314d9109bea2217feff1d6cd60ed0d0 dialogblocks-4.08-r1.ebuild 1462
+MISC ChangeLog 1521 RMD160 660cca5bc6ae26abf1dc38f820a75c2d47e74d69 SHA1 2b16a4742d39fdccc678bc152621a1b1e28415e5 SHA256 20f362a90249d272fa9847ce04b79519a3b8f03c0ceaf8366d3c5e7a247cd03e
+MD5 655759ba4065538fc12511b3399cebaa ChangeLog 1521
+RMD160 660cca5bc6ae26abf1dc38f820a75c2d47e74d69 ChangeLog 1521
+SHA256 20f362a90249d272fa9847ce04b79519a3b8f03c0ceaf8366d3c5e7a247cd03e ChangeLog 1521
 MISC metadata.xml 505 RMD160 f90ac70664a606a1349c5882ed08ff9ed0d2c6c2 SHA1 2094518d3883e07ad6d5e49a977edd56f7c2762d SHA256 a1eb4cca2819059f779cf93f87ac970fb363d77fd7af96887a8a6ad0003579e7
 MD5 bf485cb78e5683b4a4a4cc16e08f982a metadata.xml 505
 RMD160 f90ac70664a606a1349c5882ed08ff9ed0d2c6c2 metadata.xml 505
@@ -30,13 +30,13 @@ SHA256 a1eb4cca2819059f779cf93f87ac970fb363d77fd7af96887a8a6ad0003579e7 metadata
 MD5 b299526497e948b78fb75d1e4e9946c4 files/digest-dialogblocks-3.19 310
 RMD160 72c2765b05b715b355eb2a39255146bd4f9e5d3f files/digest-dialogblocks-3.19 310
 SHA256 63831439e919a2ff8bbf1ddcf8b56972138c5238f7c156e1aab90d79ca4f1398 files/digest-dialogblocks-3.19 310
-MD5 6c15a1c3711afe6fd4de83b5a9c4c7c4 files/digest-dialogblocks-4.08 310
-RMD160 9fdf94eb2a6c62377e8b41a1d1add9a215e80beb files/digest-dialogblocks-4.08 310
-SHA256 1c2fb363e7d71a249e0e0ff4b2e858760a4522fcc73dda2dbadeddf5539ea11c files/digest-dialogblocks-4.08 310
+MD5 6c15a1c3711afe6fd4de83b5a9c4c7c4 files/digest-dialogblocks-4.08-r1 310
+RMD160 9fdf94eb2a6c62377e8b41a1d1add9a215e80beb files/digest-dialogblocks-4.08-r1 310
+SHA256 1c2fb363e7d71a249e0e0ff4b2e858760a4522fcc73dda2dbadeddf5539ea11c files/digest-dialogblocks-4.08-r1 310
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.4 (GNU/Linux)
 
-iD8DBQFGUrUOJnxX6mF440QRAoqkAKCE0pPVDAlPQX7e3wyzxGRoZ6CDUACfafRc
-fOzQ0y8JCRxE7wShZPgUyYk=
-=bnTy
+iD8DBQFGVAe6JnxX6mF440QRAlfwAJsHqWOxgQge/bUvrd1odxGWITSEGACgjFzD
+tykQCp60eqwxNK8+A6Cq6oM=
+=8A9+
 -----END PGP SIGNATURE-----
