@@ -1,6 +1,13 @@
 # ChangeLog for dev-util/dialogblocks
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/dialogblocks/ChangeLog,v 1.6 2007/05/22 09:16:51 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/dialogblocks/ChangeLog,v 1.7 2007/05/23 09:20:58 mrness Exp $
+
+*dialogblocks-4.08-r1 (23 May 2007)
+
+  23 May 2007; Alin Năstac <mrness@gentoo.org> -dialogblocks-4.08.ebuild,
+  +dialogblocks-4.08-r1.ebuild:
+  Fix bloopers of previous versions. Request gtk+ to be installed with
+  xinerama support (#179460).
 
 *dialogblocks-4.08 (22 May 2007)
 
